# creator-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  creator_env_environment.py  models.py  requirements.txt
