[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influencer_business_sim"
version = "1.0.0"
description = "A real-world simulation of influencer brand deal negotiations for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Kashish Agarwal"}
]
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "python-dotenv"
]

[project.scripts]
# This tells the validator how to start your server
server = "server.app:main"

[tool.setuptools]
include-package-data = true
# This ensures your server folder is treated as a package
packages = ["server"]